<resources>
    <string name="app_name">ScreenInteractionTest</string>
    <string name="content_description_splash">Screen Interaction</string>
    <string name="title_contact_list">Medarbetare</string>
    <string name="list_contacts_empty">No contacts found. Pull to refresh!</string>
    <string name="database_name">SI_DB</string>
    <string name="error_database_operation_on_main_thread">Attempted to perform a database operation on the main thread!</string>
    <string name="contact_favorite">Favorite</string>
    <string name="contact_api_endpoint" translatable="false">http://www.screeninteraction.com/~simonedstrom</string>
    <string name="error_contact_info_download">Could not retrieve contacts. Sorry about that, please try again later.</string>
    <string name="action_sort">Sort…</string>
    <string name="sort_mode_first_name_descending">First name (descending)</string>
    <string name="sort_mode_first_name_ascending">First name (ascending)</string>
    <string name="sort_mode_last_name_descending">Last name (descending)</string>
    <string name="sort_mode_last_name_ascending">Last name (ascending)</string>
    <string name="action_save">Save as contact</string>
    <string name="action_favorite">Favorite</string>
    <string name="content_description_picture">Picture</string>
    <string name="contact_attribute_phone">Telefon</string>
    <string name="contact_attribute_email">E-post</string>
    <string name="contact_attribute_website">Webbsida</string>
    <string name="easter_egg_message">%s is a star!</string>
    <string name="easter_egg_error_message">Congratulations, you found the easter egg! Now install Twitter and try again, it gets much better!</string>
</resources>
