<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include
        layout="@layout/include_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- We want to allow the user to scroll if the screen is small, don't we? -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="true"
        android:requiresFadingEdge="none"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/contact_detail_picture_bottom_margin">

                <ImageView
                    android:id="@+id/picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_description_picture"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/overlay"
                    style="@style/ContactPictureOverlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/picture"
                    android:layout_alignStart="@id/picture"
                    android:layout_margin="@dimen/contact_picture_overlay"
                    android:padding="@dimen/contact_picture_overlay_padding"
                    android:textIsSelectable="true"/>
            </RelativeLayout>

            <com.screeninteractiontest.jorge.ui.widget.ContactFieldView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/contact_field_margin"
                android:layout_marginEnd="@dimen/contact_field_margin"
                android:layout_marginStart="@dimen/contact_field_margin"
                app:fieldType="@string/contact_attribute_phone"/>

            <com.screeninteractiontest.jorge.ui.widget.ContactFieldView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/contact_field_margin"
                android:layout_marginEnd="@dimen/contact_field_margin"
                android:layout_marginStart="@dimen/contact_field_margin"
                app:fieldType="@string/contact_attribute_email"/>

            <com.screeninteractiontest.jorge.ui.widget.ContactFieldView
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/contact_field_margin"
                android:layout_marginEnd="@dimen/contact_field_margin"
                android:layout_marginStart="@dimen/contact_field_margin"
                app:fieldType="@string/contact_attribute_website"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>